remove cytoscape code